--- a/index.html
+++ b/index.html
@@ -709,12 +709,12 @@
         let db = null;
 
         const firebaseConfig = {
-            apiKey: "請填入您的API_KEY",
-            authDomain: "請填入您的PROJECT_ID.firebaseapp.com",
-            projectId: "請填入您的PROJECT_ID",
-            storageBucket: "請填入您的PROJECT_ID.appspot.com",
-            messagingSenderId: "請填入您的MESSAGING_SENDER_ID",
-            appId: "請填入您的APP_ID"
+            apiKey: "AIzaSyC5A3HUWwkH1mFU0u7mzkdLXFJ3BlYiaTI",
+    authDomain: "wiilc-family.firebaseapp.com",
+    projectId: "wiilc-family",
+    storageBucket: "wiilc-family.firebasestorage.app",
+    messagingSenderId: "855894103830",
+    appId: "1:855894103830:web:12245d01c942ed803ba237"
         };
 
         function initApp() {
